// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-feed-person"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when no src url - non human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <svg
      aria-hidden="true"
      class="octicon octicon-mark-github"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M6.766 11.328c-2.063-.25-3.516-1.734-3.516-3.656 0-.781.281-1.625.75-2.188-.203-.515-.172-1.609.063-2.062.625-.078 1.468.25 1.968.703.594-.187 1.219-.281 1.985-.281.765 0 1.39.094 1.953.265.484-.437 1.344-.765 1.969-.687.218.422.25 1.515.046 2.047.5.593.766 1.39.766 2.203 0 1.922-1.453 3.375-3.547 3.64.531.344.89 1.094.89 1.954v1.625c0 .468.391.734.86.547C13.781 14.359 16 11.53 16 8.03 16 3.61 12.406 0 7.984 0 3.563 0 0 3.61 0 8.031a7.88 7.88 0 0 0 5.172 7.422c.422.156.828-.125.828-.547v-1.25c-.219.094-.5.156-.75.156-1.031 0-1.64-.562-2.078-1.609-.172-.422-.36-.672-.719-.719-.187-.015-.25-.093-.25-.187 0-.188.313-.328.625-.328.453 0 .844.281 1.25.86.313.452.64.655 1.031.655s.641-.14 1-.5c.266-.265.47-.5.657-.656"
      />
    </svg>
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-feed-person"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > renders the fallback icon when the image fails to load (isBroken = true) - non human user 1`] = `
<div
  class="prc-Stack-Stack-UQ9k6"
  data-align="center"
  data-direction="horizontal"
  data-gap="condensed"
  data-justify="start"
  data-padding="none"
  data-testid="avatar"
  data-wrap="nowrap"
>
  <svg
    aria-hidden="true"
    class="octicon octicon-mark-github"
    display="inline-block"
    fill="currentColor"
    focusable="false"
    height="16"
    overflow="visible"
    style="vertical-align: text-bottom;"
    viewBox="0 0 16 16"
    width="16"
  >
    <path
      d="M6.766 11.328c-2.063-.25-3.516-1.734-3.516-3.656 0-.781.281-1.625.75-2.188-.203-.515-.172-1.609.063-2.062.625-.078 1.468.25 1.968.703.594-.187 1.219-.281 1.985-.281.765 0 1.39.094 1.953.265.484-.437 1.344-.765 1.969-.687.218.422.25 1.515.046 2.047.5.593.766 1.39.766 2.203 0 1.922-1.453 3.375-3.547 3.64.531.344.89 1.094.89 1.954v1.625c0 .468.391.734.86.547C13.781 14.359 16 11.53 16 8.03 16 3.61 12.406 0 7.984 0 3.563 0 0 3.61 0 8.031a7.88 7.88 0 0 0 5.172 7.422c.422.156.828-.125.828-.547v-1.25c-.219.094-.5.156-.75.156-1.031 0-1.64-.562-2.078-1.609-.172-.422-.36-.672-.719-.719-.187-.015-.25-.093-.25-.187 0-.188.313-.328.625-.328.453 0 .844.281 1.25.86.313.452.64.655 1.031.655s.641-.14 1-.5c.266-.265.47-.5.657-.656"
    />
  </svg>
  <div
    class="prc-Truncate-Truncate-2G1eo"
    data-inline="true"
    style="--truncate-max-width: 280px;"
    title="@gitify-app"
  >
    @gitify-app
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;

exports[`renderer/components/avatars/AvatarWithFallback.tsx > should render avatar - non-human user 1`] = `
<div>
  <div
    class="prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-testid="avatar"
    data-wrap="nowrap"
  >
    <img
      alt="gitify-app"
      class="prc-Avatar-Avatar-0xaUi"
      data-component="Avatar"
      data-square=""
      height="16"
      src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
      style="--avatarSize-regular: 16px;"
      width="16"
    />
    <div
      class="prc-Truncate-Truncate-2G1eo"
      data-inline="true"
      style="--truncate-max-width: 280px;"
      title="@gitify-app"
    >
      @gitify-app
    </div>
  </div>
</div>
`;
